--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -53,6 +53,7 @@
 			knip-ops should be gone soon -->
 		<knip-tmp-imglib2-ops.version>0.4.1</knip-tmp-imglib2-ops.version>
 		<knip-trackmate-fork.version>2.7.3</knip-trackmate-fork.version>
+        <imglib2-realtransform.version>2.0.99</imglib2-realtransform.version>
 	</properties>
 
 	<dependencies>
