--- a/autogen/pom.xml
+++ b/autogen/pom.xml
@@ -56,6 +56,7 @@
 		<imglib2-realtransform.version>2.0.0</imglib2-realtransform.version>
 		<imglib2.version>5.6.3</imglib2.version>
 		<scifio.version>0.37.3</scifio.version>
+        <imagej-ops.version>0.44.0</imagej-ops.version>
         <bigdataviewer-ui-panel.version>0.1.1</bigdataviewer-ui-panel.version>
 	</properties>
 
